--- a/Verk7/verk7.css
+++ b/Verk7/verk7.css
@@ -100,10 +100,7 @@ body {
 }
 
 .thrountexti {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    height: 600px;
+    align-items: center;
 }
 
 .mynd1_2 {
