--- a/Verk7/verk7.css
+++ b/Verk7/verk7.css
@@ -43,6 +43,12 @@ body {
 .poster1 {
     display: none;
 }
+/*.poster {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    border: 1px white solid;
+}*/
 
 .poster1_2 {
     display: block;
@@ -65,6 +71,15 @@ body {
     background-position: bottom;
 }
 
+
+/*.kynning {
+    padding: 60px 10% 10% 10%;
+    background-image: url("air_bubbles.png"), url("ljósstafir.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+}*/
+
 .demographics {
     align-items: center;
     grid-template-columns: 1fr 1fr;
@@ -82,6 +97,13 @@ body {
 
 .throun {
     padding: 40px;
+}
+
+.thrountexti {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    height: 600px;
 }
 
 .mynd1_2 {
@@ -119,11 +141,7 @@ body {
     border: 1px white solid;
 }
 
-.myndband {
-    display: block;
-    margin: 50px auto;
-    aspect-ratio: 16 / 9;
-    width: 80%;
+.belowzerotexti {
 }
 
 @media screen and (min-width: 37.5em) {
